[project]
name = "flaskr"
version = "0.1.0"
description = "The basic blog app built in the Flask tutorial."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "coverage>=7.6.9",
    "flask>=3.1.0",
    "pytest>=8.3.4",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["flaskr"]
